[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/scripts/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -34.0
margin_right = 20.0
margin_bottom = 34.0

[node name="Jogar" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_right = 65.0
margin_bottom = 20.0
text = "Jogar"

[node name="Tutorial" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 24.0
margin_right = 65.0
margin_bottom = 44.0
text = "Tutorial"

[node name="Creditos" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 48.0
margin_right = 65.0
margin_bottom = 68.0
text = "Cr√©ditos"

[node name="Sair" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 72.0
margin_right = 65.0
margin_bottom = 92.0
text = "Sair"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Jogar" to="." method="_on_Jogar_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Creditos" to="." method="_on_Creditos_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Sair" to="." method="_on_Sair_pressed"]
